packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_fiat_currencies() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_fiat_currencies();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_fiat_currenciesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_fiat_currencies');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_fiat_currencies =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_fiat_currenciesPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_payments() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_payments();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_paymentsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_payments');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_payments =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_paymentsPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_refundables() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_refundables();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_refundablesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_refundables');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_refundables =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_list_refundablesPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_auth() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_auth();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_authPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_auth');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_auth =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_authPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_pay() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_pay();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_payPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_pay');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_pay =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_payPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_withdraw() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_withdraw();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_withdrawPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_withdraw');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_withdraw =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_lnurl_withdrawPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_pay_onchain() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_pay_onchain();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_pay_onchainPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_pay_onchain');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_pay_onchain =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_pay_onchainPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_buy_bitcoin() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_buy_bitcoin();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_buy_bitcoinPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_buy_bitcoin');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_buy_bitcoin =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_buy_bitcoinPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_pay_onchain() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_pay_onchain();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_pay_onchainPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_pay_onchain');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_pay_onchain =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_pay_onchainPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_receive_payment() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_receive_payment();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_receive_paymentPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_receive_payment');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_receive_payment =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_receive_paymentPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_refund() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_refund();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_refundPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_refund');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_refund =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_refundPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_send_payment() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_send_payment();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_send_paymentPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_send_payment');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_send_payment =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_prepare_send_paymentPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_receive_payment() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_receive_payment();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_receive_paymentPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_receive_payment');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_receive_payment =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_receive_paymentPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_recommended_fees() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_recommended_fees();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_recommended_feesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_recommended_fees');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_recommended_fees =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_recommended_feesPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_refund() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_refund();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_refundPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_refund');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_refund =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_refundPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_register_webhook() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_register_webhook();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_register_webhookPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_register_webhook');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_register_webhook =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_register_webhookPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_remove_event_listener() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_remove_event_listener();
  }

  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_remove_event_listenerPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function()>>(
          'uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_remove_event_listener');
  late final _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_remove_event_listener =
      _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_remove_event_listenerPtr
          .asFunction<int Function()>();

  int uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_rescan_onchain_swaps() {
    return _uniffi_breez_sdk_liquid_bindings_checksum_method_bindingliquidsdk_rescan_onchain_swaps();
  }
